# Azure_GitHub_workflows

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  main.yml  upload.yml
src/lfl_data_upload/: main.py
