[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lfl-data-upload"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "openpyxl",
]
description = ""

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.scripts]
process_data = "lfl_data_upload.main:main"


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
files = [
    "src/",
]
ignore_missing_imports = true
strict = true

[tool.ruff]
ignore = [
    "D100", # Don't want module level docstring
    "D104", # Don't want package level docstring
    "S101", # assert is fine to use
]
line-length = 88
select = [
    "A",
    "B",
    "D",
    "DTZ",
    "E",
    "F",
    "N",
    "PD",
    "S",
    "W",
]

[tool.ruff.pydocstyle]
convention = "numpy"
